--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,11 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.4</version>
+        </dependency>
 
         <!--MyBatis-->
         <dependency>
